STY: Fixing css
addressing other comments

BUG: Fixed horizontal scrollbar

TST: Fixing tests, since all widths are now at 100%

STY: Partially fixing vertical scrollbar.  Still issues with obtaining the correct header height.

--- a/emperor/support_files/css/emperor.css
+++ b/emperor/support_files/css/emperor.css
@@ -316,5 +316,10 @@ a.media-button:hover img{
  **/
 .slick-row.ui-widget-content, .slick-cell {
     background: none;
+    border-top: none;
 }
 
+.slick-viewport {
+    overflow-x: hidden !important;
+    position: fixed;
+}
